--- a/Perceptron.cabal
+++ b/Perceptron.cabal
@@ -26,8 +26,8 @@ executable Train
   hs-source-dirs:      src
   ghc-options:         -Wall
 
-executable runkFold
-  main-is: runkFold.hs
+executable RunKFold
+  main-is: RunKFold.hs
   build-depends:       base >=4.5 && < 5,
                        random >=1.0 && < 2, array >= 0.4 && < 1.0
   hs-source-dirs:      src
